--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
     <script>
         // MinuteInbox Configuration
         const TEMP_MAIL_CONFIG = {
-            domain: "malldrops.com",
-            baseUrl: "https://www.minuteinbox.com",
+            domain: "doodrops.org",
+            baseUrl: "https://www.disposablemail.com",
             expireTime: 10 // minutes
         };
 
