--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 <body>
     <!-- Header Image with Clickable Link -->
     <div class="header-container">
-        <a href="https://t.me/earningbyhabib" target="_blank">
+        <a href="https://earningbyhabib.github.io/Tempmail/Note.html" target="_blank">
             <img src="https://i.postimg.cc/W118gC2j/Screenshot-20250727-062027.jpg" alt="EARNING BY HABIB" class="header-image">
         </a>
     </div>
