--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 
     <!-- YouTube Video Container -->
     <div class="video-container">
-        <iframe src="https://www.youtube.com/embed/US_nYiqNhBo" 
+        <iframe src="https://youtu.be/267Z-1FVhtU?si=WWf-CxNyhwPPozl0" 
                 title="YouTube video player" 
                 frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
