--- a/index.html
+++ b/index.html
@@ -310,6 +310,8 @@
     </style>
 </head>
 <body>
+    <script async="async" data-cfasync="false" src="//pl27278535.profitableratecpm.com/95371a580c2f61c1e8e13300f4c14158/invoke.js"></script>
+<div id="container-95371a580c2f61c1e8e13300f4c14158"></div>
     <!-- Header Image with Clickable Link -->
     <div class="header-container">
         <a href="https://earningbyhabib.github.io/Tempmail/Note.html" target="_blank">
