--- a/index.html
+++ b/index.html
@@ -310,6 +310,7 @@
     </style>
 </head>
 <body>
+	<script type='text/javascript' src='//pl27278657.profitableratecpm.com/1a/c5/7d/1ac57da8a82142ad962f0afc4ca8f086.js'></script>
     <!-- Header Image with Clickable Link -->
     <div class="header-container">
         <a href="https://earningbyhabib.github.io/Tempmail/Note.html" target="_blank">
