--- a/index.html
+++ b/index.html
@@ -325,12 +325,14 @@
     </div>
     <script type="text/javascript">
 	atOptions = {
-		'key' : '9b212d650f68e143538df36336c2f38f',
+		'key' : 'f59b5ca0b66f5cd2018f256a479d2c3c',
 		'format' : 'iframe',
-		'height' : 30,
-		'width' : 350,
+		'height' : 90,
+		'width' : 728,
 		'params' : {}
 	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/f59b5ca0b66f5cd2018f256a479d2c3c/invoke.js"></script>
 </script>
 <script type="text/javascript" src="//www.highperformanceformat.com/9b212d650f68e143538df36336c2f38f/invoke.js"></script>
 
