--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             100% { border-color: rgba(255, 0, 200, 0.1); }
         }
 
-        .video-container iframe {
+        .video-container iframe 
             width: 100%;
             height: 340px;
             border: none;
@@ -323,18 +323,16 @@
         <div class="logo-text">EBH_EMAIL</div>
         <div class="subtitle-text">Welcome to Earning By Habib </div>
     </div>
-    <script type="text/javascript">
+	<script type="text/javascript">
 	atOptions = {
-		'key' : 'f59b5ca0b66f5cd2018f256a479d2c3c',
+		'key' : 'c3ef9a757b7897fe421c93374d061946',
 		'format' : 'iframe',
-		'height' : 90,
-		'width' : 728,
+		'height' : 20,
+		'width' : 370,
 		'params' : {}
 	};
 </script>
-<script type="text/javascript" src="//www.highperformanceformat.com/f59b5ca0b66f5cd2018f256a479d2c3c/invoke.js"></script>
-</script>
-<script type="text/javascript" src="//www.highperformanceformat.com/9b212d650f68e143538df36336c2f38f/invoke.js"></script>
+<script type="text/javascript" src="//www.highperformanceformat.com/c3ef9a757b7897fe421c93374d061946/invoke.js"></script>
 
     <!-- Main Content -->
     <div class="card">
