--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             100% { border-color: rgba(255, 0, 200, 0.1); }
         }
 
-        .video-container iframe 
+        .video-container iframe {
             width: 100%;
             height: 340px;
             border: none;
@@ -323,12 +323,12 @@
         <div class="logo-text">EBH_EMAIL</div>
         <div class="subtitle-text">Welcome to Earning By Habib </div>
     </div>
-	<script type="text/javascript">
+    <script type="text/javascript">
 	atOptions = {
 		'key' : 'c3ef9a757b7897fe421c93374d061946',
 		'format' : 'iframe',
-		'height' : 20,
-		'width' : 370,
+		'height' : 50,
+		'width' : 320,
 		'params' : {}
 	};
 </script>
